[RM] Support #57809. Sweep out of MaxPermSize option from Sailfish projects
Change-Id: Ifbfbc3b9d6f209fa85b5db49841de9dbdbd8be08