@@ -70,7 +70,7 @@ dependencies {
     }
     compileOnly 'javax.servlet:javax.servlet-api:4.0.1'
 
-    //FIXME: replace all log4j to slf4j logger 
+    //FIXME: replace all log4j to slf4j logger
     compileOnly "org.slf4j:slf4j-log4j12:${version_slf4j}"
 
     compile "org.slf4j:slf4j-api:${version_slf4j}"
@@ -79,7 +79,7 @@ dependencies {
     compile 'io.qameta.allure:allure-junit4:2.8.1'
 
     compile 'com.google.guava:guava:27.0.1-jre'
-	
+
     //compile 'commons-cli:commons-cli:1.2'
     compile 'commons-configuration:commons-configuration:1.10'
     compile 'commons-io:commons-io:2.6'
@@ -100,22 +100,22 @@ dependencies {
     compile "org.hibernate:hibernate-envers:$version_hibernate"
     //compile 'org.hibernate:hibernate-core:4.1.8.Final'
     //compile 'org.hibernate:hibernate-entitymanager:4.1.8.Final'
-    
+
     //compile 'com.mchange:mchange-commons-java:0.2.3' ???
-    
+
     compile 'org.apache.commons:commons-email:1.5'
     //compile 'com.sun.mail:javax.mail:1.5.2' ???
 
     compile 'com.fasterxml.jackson.core:jackson-databind:2.9.7'
- 
+
     compile 'org.jamon:jamon-runtime:2.4.1'
-    
+
 	// netty
 	compile 'io.netty:netty-codec:4.1.39.Final'
 
     //poi
 	compile 'org.apache.poi:poi-ooxml:4.0.0'
-	
+
 	compile 'org.flywaydb:flyway-core:4.2.0'
 
     compile 'org.freemarker:freemarker:2.3.28'
@@ -223,19 +223,19 @@ task generateJavaFromXsd (dependsOn: 'createDir') {
 	    {
             produces(dir: "${genJavaDir}/com/exactpro/sf/aml", includes: '*')
 	    }
-	    
+
 	    ant.xjc(schema: "${xsdDir}/data.xsd", destdir: "${genJavaDir}",
                 package: 'com.exactpro.sf.configuration.data', removeOldOutput: 'yes')
 	    {
             produces(dir: "${genJavaDir}/com/exactpro/sf/configuration/data", includes: '*')
 	    }
-	    
+
 	    ant.xjc(schema: "${xsdDir}/services.xsd", destdir: "${genJavaDir}",
                 package: 'com.exactpro.sf.configuration.services', removeOldOutput: 'yes')
 	    {
             produces(dir: "${genJavaDir}/com/exactpro/sf/configuration/services", includes: '*')
 	    }
-	    
+
 	    ant.xjc(schema: "${xsdDir}/adapters.xsd", destdir: "${genJavaDir}",
                 package: 'com.exactpro.sf.configuration.adapters', removeOldOutput: 'yes')
 	    {
@@ -314,7 +314,7 @@ task copyNpmResources (type: Copy) {
        }
    }
    into jqueryResourcesTargetDir
-   
+
    includeEmptyDirs = false
 }
 
@@ -359,8 +359,6 @@ compileKotlin {
 
 test {
     systemProperties "basedir": "${projectDir}"
-
-	jvmArgs '-XX:MaxPermSize=256m'
 }
 
 artifacts {
@@ -399,7 +397,7 @@ def configureGenerateSailfishMessage(files, inputs, outputs) {
 }
 
 def generateSailfishMessage(dictionaries) {
-	dictionaries.each { dict -> 
+	dictionaries.each { dict ->
     	println "\t${dict.name}"
     	javaexec {
             classpath sourceSets.main.runtimeClasspath
